# halo2-proof-of-innocence

./: .gitignore  Cargo.toml  README.md
data/: proof_of_innocence.in
examples/: proof_of_innocence.rs  railgun_poi.rs
poseidon_chip/: Cargo.toml
poseidon_chip/src/: lib.rs
src/circuits/: binary_number.rs
