[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
array-init = "2.0.0"
rand = "0.8"
itertools = "0.10.3"
lazy_static = "1.4"
log = "0.4"
num-bigint = { version = "0.4" }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "axiom-dev-0406" }
rayon = "1.6.1"
poseidon = { git = "https://github.com/axiom-crypto/halo2.git", branch = "axiom/dev", package = "poseidon" }
